--- a/collection.html
+++ b/collection.html
@@ -9,130 +9,148 @@
     <title>Collection</title>
 </head>
 <body>
-    <header>
+    <div class="collection_body">
+        <nav class="navbar">
+            <div class="tae"><i class="fas fa-boxes fa-2x"></i></div>
+            <div class="logoname_big">Unsplash<br>
+            <h6 class="small_logo">Photos for everyone</h6>
+            </div>
+            
+            <form method="get" action="#" class="search_container">
+            <i class="fas fa-search"></i>
+            <input type="text" size="25" placeholder="Search photos">
+            </form>
+            <a class="nav_link" href="collection.html">Collections</a>
+            <a class="nav_link" href="https://unsplash.com/explore">Explore</a>
+            <a class="nav_link" href="https://unsplash.com/explore"><i class="fas fa-stream"></i></a>
+            <a href="upload.html" class="btn-flat-border">Submit a photo</a>
+            <div class="line">|</div>
+            <a href="upload.html" class="btn-flat-border2">Login</a>
+            <a href="upload.html" class="btn-flat-border3">Join free</a>    
+        </nav>
 
-    </header>
-    <section class="page_title_wrap">
-        <div class="page_title">
-            <h1>Collections</h1>
-            <p>Beautiful, free pictures of the week.<br>
-                Explore the world through collections of 
-                beautiful HD pictures free to use under the <a href="#">Unsplash License.</a></p>
-        </div>
-    </section>
-    <section class="photo_cpllection_wrap">
-        <div class="photo_collection">
-            <div class="photo_b"><a href="#"><img src="imgs/collection1_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection2_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection3_1.jpg"></a></div>
-            <h2>Iranians</h2>
-            <p>1005 photos · Curated by Ashkan Forouzani</p>
-            <div class="category_wrap">
-                <a href="#"><div class="category">Iranian</div></a>
-                <a href="#"><div class="category">Iran</div></a>
-                <a href="#"><div class="category">Women Images</div></a>
+        <section class="page_title_wrap">
+            <div class="page_title">
+                <h1>Collections</h1>
+                <p>Beautiful, free pictures of the week.<br>
+                    Explore the world through collections of 
+                    beautiful HD pictures free to use under the <a href="#">Unsplash License.</a></p>
             </div>
-        </div>
-        <div class="photo_collection">
-            <div class="photo_b"><a href="#"><img src="imgs/collection4_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection5_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection6_1.jpg"></a></div>
-            <h2>Festive moments with friends</h2>
-            <p>45 photos · Curated by Unsplash Trends</p>
-            <div class="category_wrap">
-                <a href="#"><div class="category">Friend</div></a>
-                <a href="#"><div class="category">Festive</div></a>
-                <a href="#"><div class="category">Christmas Images</div></a>
+        </section>
+        <section class="photo_cpllection_wrap">
+            <div class="photo_collection">
+                <div class="photo_b"><a href="#"><img src="imgs/collection1_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection2_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection3_1.jpg"></a></div>
+                <h2>Iranians</h2>
+                <p>1005 photos · Curated by Ashkan Forouzani</p>
+                <div class="category_wrap">
+                    <a href="#"><div class="category">Iranian</div></a>
+                    <a href="#"><div class="category">Iran</div></a>
+                    <a href="#"><div class="category">Women Images</div></a>
+                </div>
             </div>
-        </div>
-        <div class="photo_collection">
-            <div class="photo_b"><a href="#"><img src="imgs/collection7_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection8_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection9_1.jpg"></a></div>
-            <h2>Festive with blank space</h2>
-            <p>50 photos · Curated by Unsplash Trends</p>
-            <div class="category_wrap">
-                <a href="#"><div class="category">Space Images</div></a>
-                <a href="#"><div class="category">Festive</div></a>
-                <a href="#"><div class="category">HD Holiday Wallpapers</div></a>
+            <div class="photo_collection">
+                <div class="photo_b"><a href="#"><img src="imgs/collection4_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection5_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection6_1.jpg"></a></div>
+                <h2>Festive moments with friends</h2>
+                <p>45 photos · Curated by Unsplash Trends</p>
+                <div class="category_wrap">
+                    <a href="#"><div class="category">Friend</div></a>
+                    <a href="#"><div class="category">Festive</div></a>
+                    <a href="#"><div class="category">Christmas Images</div></a>
+                </div>
             </div>
-        </div>
-    </section>
-    <section class="photo_cpllection_wrap">
-        <div class="photo_collection">
-            <div class="photo_b"><a href="#"><img src="imgs/collection10_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection11_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection12_1.jpg"></a></div>
-            <h2>The Upside Down</h2>
-            <p>24 photos · Curated by Hello I'm Nik 🇬🇧</p>
-            <div class="category_wrap">
-                <a href="#"><div class="category">Upside Down</div></a>
-                <a href="#"><div class="category">Reflection</div></a>
-                <a href="#"><div class="category">Building</div></a>
+            <div class="photo_collection">
+                <div class="photo_b"><a href="#"><img src="imgs/collection7_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection8_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection9_1.jpg"></a></div>
+                <h2>Festive with blank space</h2>
+                <p>50 photos · Curated by Unsplash Trends</p>
+                <div class="category_wrap">
+                    <a href="#"><div class="category">Space Images</div></a>
+                    <a href="#"><div class="category">Festive</div></a>
+                    <a href="#"><div class="category">HD Holiday Wallpapers</div></a>
+                </div>
             </div>
-        </div>
-        <div class="photo_collection">
-            <div class="photo_b"><a href="#"><img src="imgs/collection13_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection14_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection15_1.jpg"></a></div>
-            <h2>Insert Coin(s)</h2>
-            <p>27 photos · Curated by Hello I'm Nik 🇬🇧</p>
-            <div class="category_wrap">
-                <a href="#"><div class="category">Game</div></a>
-                <a href="#"><div class="category">Gaming</div></a>
-                <a href="#"><div class="category">Electronic</div></a>
+        </section>
+        <section class="photo_cpllection_wrap">
+            <div class="photo_collection">
+                <div class="photo_b"><a href="#"><img src="imgs/collection10_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection11_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection12_1.jpg"></a></div>
+                <h2>The Upside Down</h2>
+                <p>24 photos · Curated by Hello I'm Nik 🇬🇧</p>
+                <div class="category_wrap">
+                    <a href="#"><div class="category">Upside Down</div></a>
+                    <a href="#"><div class="category">Reflection</div></a>
+                    <a href="#"><div class="category">Building</div></a>
+                </div>
             </div>
-        </div>
-        <div class="photo_collection">
-            <div class="photo_b"><a href="#"><img src="imgs/collection16_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection17_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection18_1.jpg"></a></div>
-            <h2>Happiness</h2>
-            <p>85 photos · Curated by Angie Muldowney</p>
-            <div class="category_wrap">
-                <a href="#"><div class="category">Happiness</div></a>
-                <a href="#"><div class="category">Hand</div></a>
-                <a href="#"><div class="category">Women Images</div></a>
+            <div class="photo_collection">
+                <div class="photo_b"><a href="#"><img src="imgs/collection13_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection14_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection15_1.jpg"></a></div>
+                <h2>Insert Coin(s)</h2>
+                <p>27 photos · Curated by Hello I'm Nik 🇬🇧</p>
+                <div class="category_wrap">
+                    <a href="#"><div class="category">Game</div></a>
+                    <a href="#"><div class="category">Gaming</div></a>
+                    <a href="#"><div class="category">Electronic</div></a>
+                </div>
             </div>
-        </div>
-    </section>
-    <section class="photo_cpllection_wrap">
-        <div class="photo_collection">
-            <div class="photo_b"><a href="#"><img src="imgs/collection19_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection20_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection21_1.jpg"></a></div>
-            <h2>Jack Frost (Snow and Ice)</h2>
-            <p>53 photos · Curated by Marsha Wilde</p>
-            <div class="category_wrap">
-                <a href="#"><div class="category">Frost</div></a>
-                <a href="#"><div class="category">HD Snow Wallpapers</div></a>
-                <a href="#"><div class="category">Winter Images</div></a>
+            <div class="photo_collection">
+                <div class="photo_b"><a href="#"><img src="imgs/collection16_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection17_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection18_1.jpg"></a></div>
+                <h2>Happiness</h2>
+                <p>85 photos · Curated by Angie Muldowney</p>
+                <div class="category_wrap">
+                    <a href="#"><div class="category">Happiness</div></a>
+                    <a href="#"><div class="category">Hand</div></a>
+                    <a href="#"><div class="category">Women Images</div></a>
+                </div>
             </div>
-        </div>
-        <div class="photo_collection">
-            <div class="photo_b"><a href="#"><img src="imgs/collection22_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection23_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection24_1.jpg"></a></div>
-            <h2>Earth Tones</h2>
-            <p>92 photos · Curated by Andrew Neel</p>
-            <div class="category_wrap">
-                <a href="#"><div class="category">Wood Backgrounds</div></a>
-                <a href="#"><div class="category">Interior</div></a>
-                <a href="#"><div class="category">HD White Wallpapers</div></a>
+        </section>
+        <section class="photo_cpllection_wrap">
+            <div class="photo_collection">
+                <div class="photo_b"><a href="#"><img src="imgs/collection19_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection20_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection21_1.jpg"></a></div>
+                <h2>Jack Frost (Snow and Ice)</h2>
+                <p>53 photos · Curated by Marsha Wilde</p>
+                <div class="category_wrap">
+                    <a href="#"><div class="category">Frost</div></a>
+                    <a href="#"><div class="category">HD Snow Wallpapers</div></a>
+                    <a href="#"><div class="category">Winter Images</div></a>
+                </div>
             </div>
-        </div>
-        <div class="photo_collection">
-            <div class="photo_b"><a href="#"><img src="imgs/collection25_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection26_1.jpg"></a></div>
-            <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection27_1.jpg"></a></div>
-            <h2>Fun with Fall (Thanksgiving, Autumn)</h2>
-            <p>130 photos · Curated by Christi Osterday</p>
-            <div class="category_wrap">
-                <a href="#"><div class="category">HD Autumn Wallpapers</div></a>
-                <a href="#"><div class="category">Fall Images</div></a>
-                <a href="#"><div class="category">Animals Images</div></a>
+            <div class="photo_collection">
+                <div class="photo_b"><a href="#"><img src="imgs/collection22_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection23_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection24_1.jpg"></a></div>
+                <h2>Earth Tones</h2>
+                <p>92 photos · Curated by Andrew Neel</p>
+                <div class="category_wrap">
+                    <a href="#"><div class="category">Wood Backgrounds</div></a>
+                    <a href="#"><div class="category">Interior</div></a>
+                    <a href="#"><div class="category">HD White Wallpapers</div></a>
+                </div>
             </div>
-        </div>
-    </section>
+            <div class="photo_collection">
+                <div class="photo_b"><a href="#"><img src="imgs/collection25_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_up"><a href="#"><img src="imgs/collection26_1.jpg"></a></div>
+                <div class="photo_s" id="photo_s_bottom"><a href="#"><img src="imgs/collection27_1.jpg"></a></div>
+                <h2>Fun with Fall (Thanksgiving, Autumn)</h2>
+                <p>130 photos · Curated by Christi Osterday</p>
+                <div class="category_wrap">
+                    <a href="#"><div class="category">HD Autumn Wallpapers</div></a>
+                    <a href="#"><div class="category">Fall Images</div></a>
+                    <a href="#"><div class="category">Animals Images</div></a>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
