--- a/accountpage.html
+++ b/accountpage.html
@@ -55,15 +55,15 @@
 
 
     <div class="wrapper">
-      <div class="box a"><a href="liked.html"></a><img src="./imgs/account/photo-6.jpg"alt="" class="account_art"></a></div>
-      <div class="box b"><a href="liked.html"></a><img src="./imgs/account/photo-2.jpg" alt=""class="account_art"></a></div>
-      <div class="box c"><a href="liked.html"></a><img src="./imgs/account/photo2.jpg" alt=""class="account_art"></a></div>
-      <div class="box d"><a href="liked.html"></a><img src="./imgs/account/photo-4.jpg" alt=""class="account_art"></a></div>
-      <div class="box e"><a href="liked.html"></a><img src="./imgs/account/photo-5.jpg" alt=""class="account_art"></a></div>
-      <div class="box f"><a href="liked.html"></a><img src="./imgs/account/photo-6.jpg" alt=""class="account_art"></a></div>
-      <div class="box d"><a href="liked.html"></a><img src="./imgs/account/photo-7.jpg" alt=""class="account_art"></a></div>
-      <div class="box e"><a href="liked.html"></a><img src="./imgs/account/photo-10.jpg" alt=""class="account_art"></a></div>
-      <div class="box f"><a href="liked.html"></a><img src="./imgs/account/photo-11.jpg" alt=""class="account_art"></a></div>
+      <div class="box a"><a href="like.html"><img src="./imgs/account/photo-6.jpg"alt="" class="account_art"></a></div>
+      <div class="box b"><a href="like.html"><img src="./imgs/account/photo-2.jpg" alt=""class="account_art"></a></div>
+      <div class="box c"><a href="like.html"><img src="./imgs/account/photo2.jpg" alt=""class="account_art"></a></div>
+      <div class="box d"><a href="like.html"><img src="./imgs/account/photo-4.jpg" alt=""class="account_art"></a></div>
+      <div class="box e"><a href="like.html"><img src="./imgs/account/photo-5.jpg" alt=""class="account_art"></a></div>
+      <div class="box f"><a href="like.html"><img src="./imgs/account/photo-6.jpg" alt=""class="account_art"></a></div>
+      <div class="box d"><a href="like.html"><img src="./imgs/account/photo-7.jpg" alt=""class="account_art"></a></div>
+      <div class="box e"><a href="like.html"><img src="./imgs/account/photo-10.jpg" alt=""class="account_art"></a></div>
+      <div class="box f"><a href="like.html"><img src="./imgs/account/photo-11.jpg" alt=""class="account_art"></a></div>
     </div>
       <div id="extend">
         <a href="upload.html" class="btn-flat-border5" >More photos</a>
