Mod: add mobile version

--- a/toppage.html
+++ b/toppage.html
@@ -36,7 +36,7 @@
         <div class="search">
           <form action="">
             <i class="fas fa-search fa-2x"></i>
-            <input type="search" />
+            <input type="search" placeholder="Search photos"/>
           </form>
         </div>
       </div>
@@ -44,6 +44,14 @@
 
     <main>
       <div class="container">
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
+        </div>
         <div class="wrapper">
           <figure>
             <img src="./imgs/toppage/1.jpeg" alt="" />
@@ -67,6 +75,25 @@
               </div>
             </div>
           </figure>
+        </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
         </div>
         <div class="wrapper">
           <figure>
@@ -92,6 +119,25 @@
             </div>
           </figure>
         </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
+        </div>
         <div class="wrapper">
           <figure>
             <img src="./imgs/toppage/3.jpeg" alt="" />
@@ -115,6 +161,25 @@
               </div>
             </div>
           </figure>
+        </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
         </div>
         <div class="wrapper">
           <figure>
@@ -140,6 +205,25 @@
             </div>
           </figure>
         </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
+        </div>
         <div class="wrapper">
           <figure>
             <img src="./imgs/toppage/5.jpeg" alt="" />
@@ -163,6 +247,25 @@
               </div>
             </div>
           </figure>
+        </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
         </div>
         <div class="wrapper">
           <figure>
@@ -188,6 +291,25 @@
             </div>
           </figure>
         </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
+        </div>
         <div class="wrapper">
           <figure>
             <img src="./imgs/toppage/7.jpeg" alt="" />
@@ -211,6 +333,25 @@
               </div>
             </div>
           </figure>
+        </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
         </div>
         <div class="wrapper">
           <figure>
@@ -236,6 +377,25 @@
             </div>
           </figure>
         </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
+        </div>
         <div class="wrapper">
           <figure>
             <img src="./imgs/toppage/9.jpeg" alt="" />
@@ -259,6 +419,25 @@
               </div>
             </div>
           </figure>
+        </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
         </div>
         <div class="wrapper">
           <figure>
@@ -284,6 +463,25 @@
             </div>
           </figure>
         </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
+        </div>
         <div class="wrapper">
           <figure>
             <img src="./imgs/toppage/11.jpeg" alt="" />
@@ -307,6 +505,25 @@
               </div>
             </div>
           </figure>
+        </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
         </div>
         <div class="wrapper">
           <figure>
@@ -332,6 +549,25 @@
             </div>
           </figure>
         </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
+        </div>
         <div class="wrapper">
           <figure>
             <img src="./imgs/toppage/13.jpeg" alt="" />
@@ -355,6 +591,25 @@
               </div>
             </div>
           </figure>
+        </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
         </div>
         <div class="wrapper">
           <figure>
@@ -380,6 +635,25 @@
             </div>
           </figure>
         </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
+        </div>
+        <div class="wrapper-top-mb">
+          <div class="user">
+            <a href="#">
+              <img src="./imgs/toppage/user_icon.jpeg" alt="">
+            </a>
+            <p><a href="#">User Name</a></p>
+          </div>
+        </div>
         <div class="wrapper">
           <figure>
             <img src="./imgs/toppage/15.jpeg" alt="" />
@@ -403,6 +677,17 @@
               </div>
             </div>
           </figure>
+        </div>
+        <div class="wrapper-bottom-mb">
+          <div class="wrapper-mb">
+            <div class="left-buttons">
+              <div><button><i class="fas fa-heart"></i></button></div>
+              <div><button><i class="fas fa-plus"></i></button></div>
+            </div>
+            <div class="right-buttons">
+              <div><button><i class="fas fa-long-arrow-alt-down"></i></button></div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
