--- a/toppage.html
+++ b/toppage.html
@@ -52,7 +52,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/1.jpeg" alt="" />
             <div class="wrapper-top">
@@ -95,7 +95,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/2.jpeg" alt="" />
             <div class="wrapper-top">
@@ -138,7 +138,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/3.jpeg" alt="" />
             <div class="wrapper-top">
@@ -181,7 +181,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/4.jpeg" alt="" />
             <div class="wrapper-top">
@@ -224,7 +224,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/5.jpeg" alt="" />
             <div class="wrapper-top">
@@ -267,7 +267,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/6.jpeg" alt="" />
             <div class="wrapper-top">
@@ -310,7 +310,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/7.jpeg" alt="" />
             <div class="wrapper-top">
@@ -353,7 +353,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/8.jpeg" alt="" />
             <div class="wrapper-top">
@@ -396,7 +396,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/9.jpeg" alt="" />
             <div class="wrapper-top">
@@ -439,7 +439,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/10.jpeg" alt="" />
             <div class="wrapper-top">
@@ -482,7 +482,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/11.jpeg" alt="" />
             <div class="wrapper-top">
@@ -525,7 +525,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/12.jpeg" alt="" />
             <div class="wrapper-top">
@@ -568,7 +568,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/13.jpeg" alt="" />
             <div class="wrapper-top">
@@ -611,7 +611,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/14.jpeg" alt="" />
             <div class="wrapper-top">
@@ -654,7 +654,7 @@
             <p><a href="#">User Name</a></p>
           </div>
         </div>
-        <div class="wrapper">
+        <div class="wrapper-figure">
           <figure>
             <img src="./imgs/toppage/15.jpeg" alt="" />
             <div class="wrapper-top">
