--- a/like.html
+++ b/like.html
@@ -37,7 +37,7 @@
     <div class="likeContainer">
       
       <div class="mainPic">
-        <img src="imgs/collection1.jpg" alt="" />
+        <img src="imgs/collection17_1.jpg" alt="" />
         <div class="info"><p>Obere Sandstraße, Bamberg, Deutschland</p>
         <div class="buttonSet forMobile">
           <button class="gray">↑</button>
@@ -50,9 +50,9 @@
       </div>
       </div>
       <div class="subPic">
-        <img src="imgs/collection2.jpg" alt="" />
-        <img src="imgs/collection3.jpg" alt="" />
-        <img src="imgs/collection4.jpg" alt="" />
+        <img src="imgs/collection10_1.jpg" alt="" />
+        <img src="imgs/collection10_1.jpg" alt="" />
+        <img src="imgs/collection10_1.jpg" alt="" />
       </div>
       <div class="relatedTags">
         <h2>Related Tags</h2>
