Mod: add header

--- a/toppage.html
+++ b/toppage.html
@@ -13,6 +13,24 @@
     <title>Weekly Assignment</title>
   </head>
   <body>
+    <nav class="navbar">
+      <div class="tae"><i class="fas fa-boxes fa-2x"></i></div>
+      <div class="logoname_big">Unsplash<br>
+        <h6 class="small_logo">Photos for everyone</h6>
+      </div>
+      
+      <form method="get" action="#" class="search_container">
+        <i class="fas fa-search"></i>
+        <input type="text" size="25" placeholder="Search photos">
+      </form>
+      <a class="nav_link" href="collection.html">Collections</a>
+      <a class="nav_link" href="https://unsplash.com/explore">Explore</a>
+      <a class="nav_link" href="https://unsplash.com/explore"><i class="fas fa-stream"></i></a>
+      <a href="upload.html" class="btn-flat-border">Submit a photo</a>
+      <div class="line">|</div>
+      <a href="upload.html" class="btn-flat-border2">Login</a>
+      <a href="upload.html" class="btn-flat-border3">Join free</a>    
+    </nav>
     <div class="categories">
       <ul class="flex">
         <li class="active"><a href="#">Wallpapers</a></li>
