--- a/toppage.html
+++ b/toppage.html
@@ -81,9 +81,9 @@
             </div>
             <div class="wrapper-bottom">
               <div class="user">
-                <a href="#">
-                  <img src="./imgs/toppage/user_icon.jpeg" alt="">
-                  <p>User Name</p>
+                <a href="./accountpage.html">
+                  <img src="./imgs/toppage/user_beyonce.jpg" alt="">
+                  <p>Beyoncé</p>
                 </a>
               </div>
               <div class="download">
