--- a/toppage.html
+++ b/toppage.html
@@ -74,9 +74,9 @@
           <figure>
             <img src="./imgs/toppage/1.jpeg" alt="" />
             <div class="wrapper-top">
-              <div class="button"><button><i class="fas fa-heart"></button></i></div>
+              <div class="button"><button><a href="./like.html"><i class="fas fa-heart"></button></i></a></div>
               <div class="button">
-                <button><i class="fas fa-plus"></i> collect</button>
+                <button><a href="./collection.html"><i class="fas fa-plus"></i> collect</a></button>
               </div>
             </div>
             <div class="wrapper-bottom">
